# byomcp

./: README.md  pyproject.toml
agent/: agent.py
static/: app.js  index.html  styles.css
